manifests/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshell-keycloak
  labels:
    app.kubernetes.io/part-of: openshell
